[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimo-tts-relay"
version = "0.1.0"
description = "A lightweight relay that forwards MiMo text-to-speech requests for Legado and other clients."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "uvicorn[standard]>=0.29",
    "requests>=2.31",
]

[tool.setuptools]
py-modules = ["main"]
